--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -5676,7 +5676,7 @@ I/O:</property>
                                         <property name="column_spacing">6</property>
                                         <property name="row_spacing">6</property>
                                         <child>
-                                          <widget class="GtkLabel" id="label63">
+                                          <widget class="GtkLabel" id="fs-mode-title">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
                                             <property name="label" translatable="yes">Mode:</property>
@@ -5689,10 +5689,10 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkLabel" id="label65">
+                                          <widget class="GtkLabel" id="label64">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">Source:</property>
+                                            <property name="label" translatable="yes">Driver:</property>
                                           </widget>
                                           <packing>
                                             <property name="top_attach">2</property>
@@ -5702,10 +5702,10 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkLabel" id="label66">
+                                          <widget class="GtkLabel" id="label65">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">Target:</property>
+                                            <property name="label" translatable="yes">Source:</property>
                                           </widget>
                                           <packing>
                                             <property name="top_attach">3</property>
@@ -5718,7 +5718,20 @@ I/O:</property>
                                           <widget class="GtkLabel" id="fs-readonly-title">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">Readonly Filesystem:</property>
+                                            <property name="label" translatable="yes">Readonly:</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="top_attach">5</property>
+                                            <property name="bottom_attach">6</property>
+                                            <property name="x_options">GTK_FILL</property>
+                                            <property name="y_options">GTK_FILL</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkLabel" id="label66">
+                                            <property name="visible">True</property>
+                                            <property name="xalign">0</property>
+                                            <property name="label" translatable="yes">Target:</property>
                                           </widget>
                                           <packing>
                                             <property name="top_attach">4</property>
@@ -5742,11 +5755,10 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkLabel" id="fs-source">
+                                          <widget class="GtkLabel" id="fs-driver">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
                                             <property name="label">label</property>
-                                            <property name="ellipsize">end</property>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -5757,7 +5769,7 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkLabel" id="fs-target">
+                                          <widget class="GtkLabel" id="fs-source">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
                                             <property name="label">label</property>
@@ -5773,6 +5785,21 @@ I/O:</property>
                                         </child>
                                         <child>
                                           <widget class="GtkLabel" id="fs-readonly">
+                                            <property name="visible">True</property>
+                                            <property name="xalign">0</property>
+                                            <property name="label">label</property>
+                                            <property name="ellipsize">end</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="left_attach">1</property>
+                                            <property name="right_attach">2</property>
+                                            <property name="top_attach">5</property>
+                                            <property name="bottom_attach">6</property>
+                                            <property name="y_options">GTK_FILL</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkLabel" id="fs-target">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
                                             <property name="label">label</property>
