Fix some accelerator key issues

--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -1663,7 +1663,7 @@ is not yet supported.&lt;/small&gt;</property>
                                     <property name="spacing">6</property>
                                     <child>
                                       <widget class="GtkButton" id="config-storage-browse">
-                                        <property name="label" translatable="yes">B_rowse...</property>
+                                        <property name="label" translatable="yes">Bro_wse...</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
