--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -297,7 +297,7 @@
                                             <property name="spacing">6</property>
                                             <child>
                                               <widget class="GtkButton" id="config-storage-browse">
-                                                <property name="label" translatable="yes">B_rowse...</property>
+                                                <property name="label" translatable="yes">Bro_wse...</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="receives_default">True</property>
@@ -359,6 +359,7 @@
                                             <property name="xalign">0</property>
                                             <property name="label" translatable="yes">_Device type:</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">config-storage-devtype</property>
                                           </widget>
                                           <packing>
                                             <property name="x_options">GTK_FILL</property>
@@ -368,7 +369,7 @@
                                           <widget class="GtkLabel" id="label28">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">Cache _mode:</property>
+                                            <property name="label" translatable="yes">Cac_he mode:</property>
                                             <property name="use_underline">True</property>
                                             <property name="mnemonic_widget">config-storage-cache</property>
                                           </widget>
@@ -395,8 +396,9 @@
                                           <widget class="GtkLabel" id="label1">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">Storage _format:</property>
+                                            <property name="label" translatable="yes">S_torage format:</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">config-storage-format</property>
                                           </widget>
                                           <packing>
                                             <property name="top_attach">2</property>
@@ -485,6 +487,7 @@
                                             <property name="label" translatable="yes">_MAC address:</property>
                                             <property name="use_markup">True</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">create-mac-address</property>
                                           </widget>
                                           <packing>
                                             <property name="top_attach">1</property>
@@ -499,6 +502,7 @@
                                             <property name="xalign">0</property>
                                             <property name="label" translatable="yes">D_evice model:</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">net-model</property>
                                           </widget>
                                           <packing>
                                             <property name="top_attach">2</property>
@@ -1065,6 +1069,7 @@
                                                 <property name="xalign">0</property>
                                                 <property name="label" translatable="yes">_Other:</property>
                                                 <property name="use_underline">True</property>
+                                                <property name="mnemonic_widget">graphics-keymap</property>
                                               </widget>
                                               <packing>
                                                 <property name="left_attach">2</property>
@@ -1535,9 +1540,9 @@ to connect to the virtual machine.</property>
                                                         <property name="visible">True</property>
                                                         <property name="xalign">0</property>
                                                         <property name="ypad">6</property>
-                                                        <property name="label" translatable="yes">Name:</property>
+                                                        <property name="label" translatable="yes">_Name:</property>
                                                         <property name="use_underline">True</property>
-                                                        <property name="mnemonic_widget">char-use-telnet</property>
+                                                        <property name="mnemonic_widget">char-target-name</property>
                                                       </widget>
                                                       <packing>
                                                         <property name="top_attach">5</property>
@@ -1599,7 +1604,7 @@ to connect to the virtual machine.</property>
                                                         <property name="ypad">8</property>
                                                         <property name="label" translatable="yes">_Bind Host:</property>
                                                         <property name="use_underline">True</property>
-                                                        <property name="mnemonic_widget">char-host</property>
+                                                        <property name="mnemonic_widget">char-bind-host</property>
                                                       </widget>
                                                       <packing>
                                                         <property name="top_attach">3</property>
