Reinstate all combo box entries, f16 glade throws them away
Hardcode them in the python files, since for some reason glade
just can't be convinced to hang onto them. I know they are deprecated,
but only as of gtk 2.24 which is much newer than our current minimal
target of RHEL6 2.18

--- a/src/vmm-create-pool.ui
+++ b/src/vmm-create-pool.ui
@@ -387,6 +387,7 @@
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
                                 <property name="position">1</property>
+                                <property name="pack_type">end</property>
                               </packing>
                             </child>
                           </object>
@@ -417,6 +418,7 @@
                                 <property name="expand">False</property>
                                 <property name="fill">False</property>
                                 <property name="position">1</property>
+                                <property name="pack_type">end</property>
                               </packing>
                             </child>
                           </object>
